react_app/src/Matches.css
.match {
    background-color: var(--grey100);
    height: 8rem;
    position: relative;
}

.teamsContainer {
    position: relative;
}

.teamsShadow{
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    background-color: transparent;
    pointer-events: none;
}

.teamPlayer {
    padding: 0.3rem;
}

.teamPlayer > p {
    font-size: 1.25rem;
    margin: 0.5rem;
    color: var(--grey800);
}

.teamPlayer > p:hover {
    color: var(--leagueBlue);
}

.team.won {
    background-color: var(--green100);
}

.team.lost {
    background-color: var(--red100);
}

.matchHistory {
    margin-left: auto;
    text-decoration: none;
    background-color: #fff;
    height: 1.75rem;
    border-radius: 1rem;
    padding: 0 0.75rem;
    font-size: 0.8rem;
    margin-right: 0.5rem;
    z-index: 1;
}

.matchHistory:hover {
    color: var(--leagueBlue);
}

.matchHistory:before {
    content: "match history";
    color: var(--grey900);
}

.matchHistory > svg {
    height: 1rem;
    width: 1rem;
    margin-left: 0.25rem;
    color: var(--leagueBlue);
    stroke-width: 2.5;
}

h2.matchMonth {
    margin: 0;
    color: var(--grey800);
}

.matchTime, .matchYear {
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 0.25rem;
    font-size: 0.8rem;
}

.matchTime {
    color: var(--grey700);
}

.matchYear {
    color: var(--grey600);
    font-weight: 400;
}

.matchYear:before {
    content: "•";
    margin-right: .2rem;
    margin-left: .1rem;
    color: var(--grey700);
}

.teamPlayerChampionIcon {
    --radius: 2.3rem;
    position: absolute;
}

.matchHistory:hover:before {
    color: var(--leagueBlue);
    text-decoration: underline;
}

.items {
    margin-left: auto;
    height: 1.25rem;
}

.items, .medalsContainer{
    margin-right: .5rem;
}

.item + .item {
    margin-left: 0.25em;
}
.item {
    /* border: solid var(--grey400) 0.2rem; */
    height: 1.25rem;
    width: 1.25rem;
    border-radius: 0.4rem;
    background-color: white;
}

.noItem {
    /*display: inline-block;
    box-shadow: inset 0 0 0.2rem 0 rgb(0 0 0 / 10%);*/
    display: none;
}

.team{
    border-left: solid 0.5rem;
}

.team:first-child{
    border-color: var(--red);
}

.team:nth-child(2){
    border-color: var(--blue400);
}

.spell + .spell {
    margin-top: 0.25rem;
}
.spell {
    width: 1rem;
    border-radius: 0.3rem;
}

.keyStone {
    height: 1.25rem;
    margin-left: -0.85rem;
    margin-top: 1.5rem;
    z-index: 1;
}

.teamPlayer .totalKda {
    margin-left: 0.5rem;
    margin-right: -0.25rem;
    font-size: 1rem;
}

.teamPlayer .statBreakdown{
    transform: scale(0.75);
}

.teamPlayer .additionalStats {
    font-size: 0.5rem;
    width: 12.5rem;
    margin-left: auto;
    margin-top: 0;
    align-self: auto;
}

.teamPlayer .totalKda {
    margin-left: 0.25rem;
    font-size: 1rem;
    margin-right: -0.35rem;
}

p.matchIndex {
    font-weight: 200;
    width: 1.5rem;
    text-align: right;
    font-size: 0.85rem;
    margin-right: 0.5rem;
    padding-top: 0.35rem;
    color: var(--grey800);
}

p.matchIndex:after {
    content: ".";
}

.teamPlayerRHS {
    margin-left: auto;
    flex-direction: column;
    align-items: flex-end;
}

.medalContainer{
    margin-top: .4rem;
}

.medalContainer + .medalContainer {
    margin-left: 0.3rem;
}

.medalIcon > svg, .medalIcon {
    width: 1rem;
    height: 1rem;
    color: var(--grey500);
}

.medalContainer > p {
    margin: 0;
    color: var(--grey700);
    font-size: 0.5rem;
    align-self: flex-end;
    margin-left: 0.1rem;
}

.medalsContainer {
}

.medalContainer > p:before {
    content: "x";
}

.teamPlayerChampionIconContainer {
    --radius: 2rem;
    margin-left: .5rem;
    margin-right: 0;
    position: relative;
    overflow: hidden;
}

.teamMiddle.blueSide, .teamMiddle.redSide .medalsContainer {
    flex-direction: row-reverse;
}

.teamMiddle.redSide .medalContainer:before{
    margin-left: 0;
}

.teamMiddle.redSide .medalContainer:after{
    margin-right: 0;
}

.matchMiddle {
    position: absolute;
    width: 100%;
}

.teamMiddle {
    width: 15rem;
    justify-content: flex-end;
}

.teamMiddle .medalContainer {
    margin-top: 0;
}

.teamMiddle .medals {
    margin: 0 0.5rem;
}

.teamMiddle .medalsContainer {
    margin-right: 0;
}

h2.teamScore.lose {
    font-weight: 200;
}

.teamMiddle + .teamMiddle:after {
    content: "•";
    position: absolute;
    width: 0.5rem;
    left: calc(50% - 0.25rem);
}

.redSide.teamMiddle .teamScore {
    text-align: end;
}

h2.teamScore {
    font-size: 2rem;
    color: var(--grey900);
    margin: 0;
}

.gameLength {
    position: absolute;
    top: -0.75rem;
    color: var(--grey600);
    font-size: 0.6rem;
    font-weight: 200;
}

.gameLength > p {
    margin: 0;
    margin-left: 0.25rem;
}

.clockContainer > svg {
    width: 0.6rem;
    height: 0.6rem;
    color: var(--grey500)
}

h2.teamScore {
    font-size: 2rem;
    color: var(--grey900);
    margin: 0 0.6rem;
}

.generalChampIconTeams {
    margin: 0 0.5rem;
}

.generalChampIcons {
    position: absolute;
    top: 3rem;
}

.generalChampIcon {
    border: solid 2px;
}

.banIconContainer, .generalChampIcon {
    --radius: 1.2rem;
}

.generalChampIcon + .generalChampIcon, .banContainer + .banContainer{
    margin-left: 0.4rem;
}

.redSide.generalChampIconTeams .generalChampIcon {
    border-color: var(--red);
}

.redSide.generalChampIconTeams .banIconContainer > svg {
    color: var(--red);
}

.blueSide.generalChampIconTeams .generalChampIcon {
    border-color: var(--blue400);
}

.blueSide.generalChampIconTeams .banIconContainer {
    color: var(--blue400);
}

.banContainer {
    position: relative;
}

.banIconContainer {
    position: absolute;
    top: 0;
    left: 0;
}

.banIconContainer > svg {
    width: 100%;
    transform: scale(1.2);
    height: 100%;
    opacity: 0.8;
}

.teamsContainer .totalKda {
    width: 4rem;
}

.kdaContainer.whole .kda > * {
    width: 1rem;
    text-align: center;
}


@media (max-width: 600px) {
    .generalChampIcon {
        border: 1px solid;
    }
}

